<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_calendar"
        android:title="@string/menu_calendar"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_graph"
        android:title="@string/menu_graph"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_body_fat_calculator"
        android:title="@string/menu_body_fat_calculator"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_statistics"
        android:title="@string/menu_statistics"
        app:showAsAction="never" />

    <item
        android:id="@+id/line"
        android:checkable="false"
        android:enabled="false"
        android:title="--------------------------------" />

    <item
        android:id="@+id/action_delete_all"
        android:checkable="false"
        android:title="@string/menu_delete_all_records" />

</menu>